--- a/pages/index.html
+++ b/pages/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>CS Resource Forum</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+<html lang="en">                                                                      <head>                                                                                <meta charset="UTF-8" />                                                            <title>CS Resource Forum</title>                                                    <link                                                                                 href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"      rel="stylesheet"
     />
     <style>
       body {
@@ -32,10 +26,6 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
       }
 
-      /* button {
-        border: none;
-        margin-right: 8px;
-      } */
     </style>
   </head>
   <body>
@@ -47,14 +37,14 @@
           students!
         </p>
         <button
-          onclick="location.href='/templates/index.html'"
+          onclick="location.href='/pages/index.html'"
           class="btn btn-info"
           style="margin-top: 12px; margin-right: 4px"
         >
           Home
         </button>
         <button
-          onclick="location.href='/templates/writePost.html'"
+        onclick="location.href='/pages/writePost.html'"
           class="btn btn-info"
           style="margin-top: 12px"
         >
@@ -67,7 +57,15 @@
     </div>
 
     <script>
-      document
+      document;
+
+      async function likePost(index) {
+        await fetch(`/like/${index}`, {
+          method: "POST",
+        });
+        loadPosts();
+      }
+
       async function loadPosts() {
         const res = await fetch("/posts");
         const data = await res.json();
@@ -78,20 +76,22 @@
           list.innerHTML = `<p class="text-muted">No posts yet. Be the first to share something!</p>`;
         }
 
-        data.reverse().forEach((post) => {
+        data.forEach((post, index) => {
           const card = document.createElement("div");
           card.className = "card post-card";
           card.innerHTML = `
-          <div class="card-body">
-            <h5 class="card-title">${post.name}</h5>
-            <p class="card-text">${post.message}</p>
-          </div>
-        `;
+    <div class="card-body">
+      <h5 class="card-title">${post.name}</h5>
+      <span class="badge bg-info text-dark mb-2">${post.tag}</span>
+      <p class="card-text">${post.message}</p>
+      <button class="btn btn-outline-danger btn-sm" onclick="likePost(${data.length - index - 1})">
+        ❤ Like (${post.likes})
+      </button>
+    </div>
+  `;
           list.appendChild(card);
         });
       }
 
       loadPosts();
     </script>
-  </body>
-</html>
