--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">                                                                      <head>                                                                                <meta charset="UTF-8" />                                                            <title>CS Resource Forum</title>                                                    <link                                                                                 href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"      rel="stylesheet"
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CS Resource Forum</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
     />
     <style>
       body {
@@ -25,7 +31,6 @@
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
       }
-
     </style>
   </head>
   <body>
@@ -44,7 +49,7 @@
           Home
         </button>
         <button
-        onclick="location.href='/pages/writePost.html'"
+          onclick="location.href='/pages/writePost.html'"
           class="btn btn-info"
           style="margin-top: 12px"
         >
@@ -53,12 +58,22 @@
       </div>
 
       <h2 class="mb-4 text-white">📚 Shared Resources</h2>
+      <div class="mb-4">
+        <input
+          type="text"
+          id="searchTag"
+          class="form-control"
+          placeholder="🔎 Search by tag (e.g. general, beginner, web dev ...)"
+          oninput="filterPosts()"
+        />
+      </div>
       <div id="postList"></div>
     </div>
 
     <script>
       document;
 
+      let allPosts = [];
       async function likePost(index) {
         await fetch(`/like/${index}`, {
           method: "POST",
@@ -67,31 +82,48 @@
       }
 
       async function loadPosts() {
-        const res = await fetch("/posts");
-        const data = await res.json();
         const list = document.getElementById("postList");
         list.innerHTML = "";
 
-        if (data.length === 0) {
-          list.innerHTML = `<p class="text-muted">No posts yet. Be the first to share something!</p>`;
-        }
+        const res = await fetch("/posts");
+        const data = await res.json();
+        allPosts = data;
 
-        data.forEach((post, index) => {
+        renderPosts(allPosts);
+      }
+
+      function renderPosts(posts) {
+        const list = document.getElementById("postList");
+        list.innerHTML = "";
+
+        posts.forEach((post, index) => {
           const card = document.createElement("div");
-          card.className = "card post-card";
+          card.className = "card post-card mb-3";
           card.innerHTML = `
-    <div class="card-body">
-      <h5 class="card-title">${post.name}</h5>
-      <span class="badge bg-info text-dark mb-2">${post.tag}</span>
-      <p class="card-text">${post.message}</p>
-      <button class="btn btn-outline-danger btn-sm" onclick="likePost(${data.length - index - 1})">
-        ❤ Like (${post.likes})
-      </button>
-    </div>
-  `;
+          <div class="card-body">
+            <h5 class="card-title">${post.name}</h5>
+            <span class="badge bg-info text-dark mb-2">${post.tag}</span>
+            <p class="card-text">${post.message}</p>
+            <button class="btn btn-outline-danger btn-sm" onclick="likePost(${
+              allPosts.length - index - 1
+            })">
+              ❤ Like (${post.likes})
+            </button>
+          </div>
+    `;
           list.appendChild(card);
         });
       }
 
+      function filterPosts() {
+        const query = document.getElementById("searchTag").value.toLowerCase();
+        const filtered = allPosts.filter((post) =>
+          post.tag.toLowerCase().includes(query)
+        );
+        renderPosts(filtered);
+      }
+
       loadPosts();
     </script>
+  </body>
+</html>
